# VST-rust

./: .gitignore  Cargo.toml  antigravity_manifest.json  installer.iss
.github/workflows/: main.yml  web.yml
deployment/: deploy.sh  main.tf
src/: cloud.rs  dsp.rs  editor.rs  lib.rs  main.rs
src/ui/: knob.rs  mod.rs  spectrum.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: input.css
xtask/src/: main.rs
